--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -13,7 +13,7 @@ import Container from "./Container.astro"
     <div class="md:columns-2 lg:columns-3 gap-8 space-y-8">
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex gap-4">
-          <img class="w-12 h-12 rounded-full" src="./images/avatars/avatar.webp" alt="user avatar" width="400" height="400" loading="lazy">
+          <img class="w-12 h-12 rounded-full" src="./images/avatars/riotrah.jpeg" alt="user avatar" width="400" height="400" loading="lazy">
           <div>
             <h6 class="text-lg font-medium text-gray-700 dark:text-white">Daniella Doe</h6>
             <p class="text-sm text-gray-500 dark:text-gray-300">Mobile dev</p>
@@ -23,17 +23,17 @@ import Container from "./Container.astro"
       </div>
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex gap-4">
-          <img class="w-12 h-12 rounded-full" src="./images/avatars/avatar-1.webp" alt="user avatar" width="200" height="200" loading="lazy">
+          <img class="w-12 h-12 rounded-full" src="./images/avatars/dailenG.jpeg" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
-            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Jane doe</h6>
-            <p class="text-sm text-gray-500 dark:text-gray-300">Marketing</p>
+            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Dailen Gunter</h6>
+            <p class="text-sm text-gray-500 dark:text-gray-300">WideData Corporation</p>
           </div>
         </div>
         <p class="mt-8"> Lorem ipsum dolor laboriosam deleniti aperiam ab veniam sint non cumque quis tempore cupiditate. Sint libero voluptas veniam at reprehenderit, veritatis harum et rerum.</p>
       </div>
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex gap-4">
-          <img class="w-12 h-12 rounded-full" src="./images/avatars/avatar-2.webp" alt="user avatar" width="200" height="200" loading="lazy">
+          <img class="w-12 h-12 rounded-full" src="./images/avatars/dillon-e.png" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
             <h6 class="text-lg font-medium text-gray-700 dark:text-white">Yanick Doe</h6>
             <p class="text-sm text-gray-500 dark:text-gray-300">Developer</p>
@@ -43,7 +43,7 @@ import Container from "./Container.astro"
       </div>
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex gap-4">
-          <img class="w-12 h-12 rounded-full" src="./images/avatars/avatar-3.webp" alt="user avatar" width="200" height="200" loading="lazy">
+          <img class="w-12 h-12 rounded-full" src="./images/avatars/mfeur.jpeg" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
             <h6 class="text-lg font-medium text-gray-700 dark:text-white">Jane Doe</h6>
             <p class="text-sm text-gray-500 dark:text-gray-300">Mobile dev</p>
@@ -53,7 +53,7 @@ import Container from "./Container.astro"
       </div>
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex gap-4">
-          <img class="w-12 h-12 rounded-full" src="./images/avatars/avatar-4.webp" alt="user avatar" width="200" height="200" loading="lazy">
+          <img class="w-12 h-12 rounded-full" src="./images/avatars/ratedBlaster.jpeg" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
             <h6 class="text-lg font-medium text-gray-700 dark:text-white">Andy Doe</h6>
             <p class="text-sm text-gray-500 dark:text-gray-300">Manager</p>
@@ -63,7 +63,7 @@ import Container from "./Container.astro"
       </div>
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex gap-4">
-          <img class="w-12 h-12 rounded-full" src="./images/avatars/avatar-2.webp" alt="user avatar" width="400" height="400" loading="lazy">
+          <img class="w-12 h-12 rounded-full" src="./images/avatars/tdark.png" alt="user avatar" width="400" height="400" loading="lazy">
           <div>
             <h6 class="text-lg font-medium text-gray-700 dark:text-white">Yanndy Doe</h6>
             <p class="text-sm text-gray-500 dark:text-gray-300">Mobile dev</p>
