--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Stats from '../components/Stats.astro';
-import Features from '../components/Features.astro';
+import Services from '../components/Services.astro';
 import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
 import Testimonials from '../components/Testimonials.astro';
@@ -11,7 +11,7 @@ import Blog from '../components/Blog.astro';
 <Layout title="Welcome to Astrolus.">
 	<main class="space-y-40 mb-40">
 		<HeroSection/>
-		<Features/>
+		<Services/>
 		<Stats/>
 		<Testimonials/>
 		<CallToAction/>
