--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -2,8 +2,8 @@
 import Container from "./Container.astro";
 const links = [
     {
-        to: "/#features",
-        label: "Features",
+        to: "/#services",
+        label: "Services",
     },
     {
         to: "/#solution",
@@ -91,7 +91,7 @@ const links = [
 
                     <div class="mt-12 lg:mt-0">
                         <a href="/register" class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max">
-                            <span class="relative text-sm font-semibold text-white"> Get Started</span>
+                            <span class="relative text-sm font-semibold text-white"> Contact Us</span>
                         </a>
                     </div>
                 </div>
