--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -11,8 +11,8 @@ import Container from "./Container.astro"
     <Container>
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
-                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Shaping a world with <span class="text-primary dark:text-white">reimagination.</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio incidunt nam itaque sed eius modi error totam sit illum. Voluptas doloribus asperiores quaerat aperiam. Quidem harum omnis beatae ipsum soluta!</p>
+                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifying Technology <span class="text-primary dark:text-white">for Your Business.</span></h1>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel [pronounced e-trill], we focus on making technology work for you, not the other way around. From consulting to implementation, we’re here to transform your tech challenges into solutions that drive results.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#"
