--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import Container from "./Container.astro"
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifying Technology <span class="text-primary dark:text-white">for Your Business.</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel [pronounced e-trill], we focus on making technology work for you, not the other way around. From consulting to implementation, we’re here to transform your tech challenges into solutions that drive results.</p>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel <span class="text-xs">[pronounced e•trill]</span>, we focus on making technology work for you, not the other way around. From consulting to implementation, we're here to transform your tech challenges into solutions that drive results, while making fun at the same time.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#"
@@ -31,42 +31,44 @@ import Container from "./Container.astro"
                         >Learn more</span
                       >
                     </a>
-                </div>
-                <div class="hidden py-8 mt-16 border-y border-gray-100 dark:border-gray-800 sm:flex justify-between">
+                </div><div class="hidden py-8 mt-16 border-y border-gray-100 dark:border-gray-800 sm:flex justify-between">
                     <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The lowest price</h6>
-                        <p class="mt-2 text-gray-500">Some text here</p>
+                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Simple solutions</h6>
+                        <p class="mt-2 text-gray-500">We LOVE simple things</p>
                     </div>
                     <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The fastest on the market</h6>
-                        <p class="mt-2 text-gray-500">Some text here</p>
+                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Fast response</h6>
+                        <p class="mt-2 text-gray-500">We don't have much to do</p>
                     </div>
                     <div class="text-left">
                         <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The most loved</h6>
-                        <p class="mt-2 text-gray-500">Some text here</p>
+                        <p class="mt-2 text-gray-500">People generally love us, what can we say</p>
                     </div>
                 </div>
             </div>
             <div class="mt-12 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
+
                 <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/microsoft.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
-                  </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                  <img src="./images/clients/airbnb.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                    <img src="./images/clients/python.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
                 <div class="p-4 flex grayscale transition duration-200 hover:grayscale-0">
                   <img src="./images/clients/google.svg" class="h-9 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
                 <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/ge.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
-                  </div>
-                  <div class="p-4 flex grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/netflix.svg" class="h-8 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
-                  </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
                     <img src="./images/clients/google-cloud.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                </div>
+                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
+                  <img src="./images/clients/azure.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                </div>
+                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
+                  <img src="./images/clients/svelte.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                </div>
+                <div class="p-4 grayscale transition duration-200 hover:grayscale-0 flex">
+                  <img src="./images/clients/veeam.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+
                 </div>
               </div>
         </div>
+
     </Container>
 </div>
