--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import Container from "./Container.astro"
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifying Technology <span class="text-primary dark:text-white">for Your Business.</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel <span class="text-xs">[pronounced e•trill]</span>, we focus on making technology work for you, not the other way around. From consulting to implementation, we're here to transform your tech challenges into solutions that drive results, while making fun at the same time.</p>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel <span class="text-xs">[pronounced e•trel]</span>, we focus on making technology work for you, not the other way around. From consulting to implementation, we're here to transform your tech challenges into solutions that drive results, while making fun at the same time.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#"
@@ -47,6 +47,7 @@ import Container from "./Container.astro"
                 </div>
             </div>
             <div class="mt-12 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
+
 
                 <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
                     <img src="./images/clients/python.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
