--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -11,10 +11,10 @@ import Container from "./Container.astro"
       </svg>
 
       <h2 class="my-8 text-2xl font-bold text-gray-700 dark:text-white md:text-4xl">
-        A technology-first approach to payments
-        and finance
+        A business-first approach to technologies
+
       </h2>
-      <p class="text-gray-600 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ad ipsum pariatur autem, fugit laborum in atque amet obcaecati? Nisi minima aspernatur, quidem nulla cupiditate nam consequatur eligendi magni adipisci.</p>
+      <p class="text-gray-600 dark:text-gray-300">We prioritize your business goals, aligning every tech solution with your unique needs. With us, technology isn't just a tool—it's a catalyst for growth, driving results that matter.</p>
     </div>
     <div
       class="mt-16 grid divide-x divide-y divide-gray-100 dark:divide-gray-700 overflow-hidden rounded-3xl border border-gray-100 text-gray-600 dark:border-gray-700 sm:grid-cols-2 lg:grid-cols-4 lg:divide-y-0 xl:grid-cols-4"
@@ -33,10 +33,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              First feature
+              Systems architecture
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              IT Systems get complicated, we don't, most of the time.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -61,10 +61,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Second feature
+              Custom solution
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Everyone is unique, including an organization or enterprising entity engaged in commercial, industrial, or professional activities, aka a business.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -89,10 +89,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Third feature
+              Educated guess
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              We can't know everything, but we know enough to guess in the right direction.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -121,10 +121,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              More features
+              Wake-up call
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Sometimes, you need to hear the truth, no matter what.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
