--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -54,10 +54,10 @@ const links = [
                 <div class="relative z-20 flex w-full justify-between md:px-0 lg:w-max">
                     <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
                         <div aria-hidden="true" class="flex space-x-1">
-                            <div class="h-4 w-4 rounded-full bg-gray-900 dark:bg-white"></div>
+                            <div class="h-6 w-4  bg-gray-900 dark:bg-white"></div>
                             <div class="h-6 w-2 bg-primary"></div>
                         </div>
-                        <span class="text-2xl font-bold text-gray-900 dark:text-white">Astrolus</span>
+                        <span class="text-2xl font-bold text-gray-900 dark:text-white">itrel</span>
                     </a>
 
                     <div class="relative flex max-h-10 items-center lg:hidden">
