--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,8 @@ import AppHeader from "../components/AppHeader.astro";
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <meta name="description" content="Template built with tailwindcss using Tailus blocks v2" />
-        <title>Tailus astro theme</title>
+
+        <title>itrel</title>
         <AstroFont
             config={[
                 {
@@ -39,6 +40,10 @@ import AppHeader from "../components/AppHeader.astro";
                 <span class="text-sm font-semibold tracking-wide text-yellow-900 dark:text-white"> Upgrade to Premium</span>
             </a>
         </div> -->
+        <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/48097688.js"></script>
+  <!-- End of HubSpot Embed Code -->
+
     </body>
 </html>
 <style>
