--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -12,14 +12,14 @@ import Container from "./Container.astro";
           >
             <ul class="list-inside list-disc space-y-8">
               <li><a href="#" class="transition hover:text-primary">Home</a></li>
-  
+
               <li><a href="#" class="transition hover:text-primary">About</a></li>
               <li><a href="#" class="transition hover:text-primary">Guide</a></li>
               <li><a href="#" class="transition hover:text-primary">Blocks</a></li>
               <li><a href="#" class="transition hover:text-primary">Contact</a></li>
               <li><a href="#" class="transition hover:text-primary">Terms of Use</a></li>
             </ul>
-  
+
             <ul role="list" class="space-y-8">
               <li>
                 <a href="#" class="flex items-center space-x-3 transition hover:text-primary">
@@ -66,7 +66,7 @@ import Container from "./Container.astro";
                   <span>YouTube</span>
                 </a>
               </li>
-  
+
               <li>
                 <a href="#" class="flex items-center space-x-3 transition hover:text-primary">
                   <svg
@@ -149,16 +149,16 @@ import Container from "./Container.astro";
             <span class="block text-gray-500 dark:text-gray-400"
               >We change the way UI components librairies are used</span
             >
-  
+
             <span class="block text-gray-500 dark:text-gray-400">Tailus Blocks &copy; <span id="year"></span></span>
-  
+
             <span class="flex justify-between text-gray-600 dark:text-white">
               <a href="#" class="font-medium">Terms of Use </a>
               <a href="#" class="font-medium"> Privacy Policy</a>
             </span>
-  
+
             <span class="block text-gray-500 dark:text-gray-400"
-              >Need help? <a href="#" class="font-semibold text-gray-600 dark:text-white"> Contact Us</a></span
+              >Need help? <a href="#hs-chat-open" class="font-semibold text-gray-600 dark:text-white"> Contact Us</a></span
             >
           </div>
         </div>
