--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -5,10 +5,7 @@ const links = [
         to: "/#services",
         label: "Services",
     },
-    {
-        to: "/#solution",
-        label: "Solution",
-    },
+
     {
         to: "/#reviews",
         label: "Reviews",
@@ -52,7 +49,7 @@ const links = [
         <Container>
             <div class="relative flex flex-wrap items-center justify-between gap-6 py-3 md:gap-0 md:py-4">
                 <div class="relative z-20 flex w-full justify-between md:px-0 lg:w-max">
-                    <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
+                    <a href="/#" aria-label="logo" class="flex items-center space-x-2">
                         <div aria-hidden="true" class="flex space-x-1">
                             <div class="h-6 w-4  bg-gray-900 dark:bg-white"></div>
                             <div class="h-6 w-2 bg-primary"></div>
@@ -90,7 +87,7 @@ const links = [
                     </div>
 
                     <div class="mt-12 lg:mt-0">
-                        <a href="/register" class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max">
+                        <a href="#hs-chat-open" class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max">
                             <span class="relative text-sm font-semibold text-white"> Contact Us</span>
                         </a>
                     </div>
