--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -23,7 +23,7 @@ import Container from "./Container.astro"
           loading="lazy"
           width="200"
           height="200"
-          src="./images/avatars/avatar-2.webp"
+          src="./images/avatars/avatar-3.webp"
           alt="member photo"
           class="h-12 w-12 rounded-full object-cover"
         />
@@ -31,7 +31,7 @@ import Container from "./Container.astro"
           loading="lazy"
           width="200"
           height="200"
-          src="./images/avatars/avatar-3.webp"
+          src="./images/avatars/avatar-2.webp"
           alt="member photo"
           class="z-10 h-16 w-16 rounded-full object-cover"
         />
@@ -55,11 +55,11 @@ import Container from "./Container.astro"
       <div class="mt-6 m-auto space-y-6 md:w-8/12 lg:w-7/12">
         <h1 class="text-center text-4xl font-bold text-gray-800 dark:text-white md:text-5xl">Contact Us now</h1>
         <p class="text-center text-xl text-gray-600 dark:text-gray-300">
-          Be part of millions people around the world using tailus in modern User Interfaces.
+          Tell us your needs or problems, we won't judge.
         </p>
         <div class="flex flex-wrap justify-center gap-6">
           <a
-              href="#"
+              href="#hs-chat-open"
               class="relative flex h-12 w-full items-center justify-center px-8 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
             >
               <span class="relative text-base font-semibold text-white dark:text-dark"
