--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -15,15 +15,15 @@ import Container from "./Container.astro"
                 <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel <span class="text-xs">[pronounced e•trel]</span>, we focus on making technology work for you, not the other way around. From consulting to implementation, we're here to transform your tech challenges into solutions that drive results, while making fun at the same time.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
-                      href="#"
+                      href="#hs-chat-open"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                     >
                       <span class="relative text-base font-semibold text-white"
-                        >Get started</span
+                        >Contact us</span
                       >
                     </a>
                     <a
-                      href="#"
+                      href="/#services"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 dark:before:border-gray-700 dark:before:bg-gray-800 sm:w-max"
                     >
                       <span
