--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,10 @@ import Blog from '../components/Blog.astro';
 	<main class="space-y-40 mb-40">
 		<HeroSection/>
 		<Services/>
-		<Stats/>
+		<!-- <Stats/> -->
 		<Testimonials/>
 		<CallToAction/>
-		<Blog/>
+		<!-- <Blog/> -->
 	</main>
 </Layout>
+
