--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -39,12 +39,12 @@ import Container from "./Container.astro"
               IT Systems get complicated, we don't, most of the time.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
@@ -67,12 +67,12 @@ import Container from "./Container.astro"
               Everyone is unique, including an organization or enterprising entity engaged in commercial, industrial, or professional activities, aka a business.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
@@ -95,15 +95,43 @@ import Container from "./Container.astro"
               We can't know everything, but we know enough to guess in the right direction.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
-      <div
+      <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+        <div class="relative space-y-8 py-12 p-8">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/4341/4341025.png"
+            class="w-12"
+            width="512"
+            height="512"
+            alt="burger illustration"
+          />
+
+          <div class="space-y-2">
+            <h5
+              class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
+            >
+            Wake-up call
+            </h5>
+            <p class="text-gray-600 dark:text-gray-300">
+              Sometimes, you just need to hear the truth, no matter what.
+            </p>
+          </div>
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+            <span class="text-sm">Read more</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
+              <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
+            </svg>
+          </a> -->
+        </div>
+      </div>
+     <!--  <div
         class="group relative bg-gray-50 dark:bg-gray-900 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10"
       >
         <div
@@ -133,7 +161,7 @@ import Container from "./Container.astro"
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </Container>
