--- a/src/components/en/HeroSection.astro
+++ b/src/components/en/HeroSection.astro
@@ -11,15 +11,15 @@ import Container from "./Container.astro"
     <Container>
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
-                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifier les Technologies <span class="text-primary dark:text-white">pour Votre Entreprise</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Chez itrel <span class="text-xs">[i•trel]</span>, nous nous concentrons sur la technologie pour vous, et non l’inverse. Du conseil à la mise en œuvre, nous sommes là pour transformer vos défis technologiques en solutions qui produisent des résultats, tout en ajoutant une touche de plaisir.</p>
+                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifying Technology <span class="text-primary dark:text-white">for Your Business.</span></h1>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">At itrel <span class="text-xs">[pronounced e•trel]</span>, we focus on making technology work for you, not the other way around. From consulting to implementation, we're here to transform your tech challenges into solutions that drive results, while making fun at the same time.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#hs-chat-open"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                     >
                       <span class="relative text-base font-semibold text-white"
-                        >Nous contacter</span
+                        >Contact us</span
                       >
                     </a>
                     <a
@@ -28,21 +28,21 @@ import Container from "./Container.astro"
                     >
                       <span
                         class="relative text-base font-semibold text-primary dark:text-white"
-                        >En savoir plus</span
+                        >Learn more</span
                       >
                     </a>
                 </div><div class="hidden py-8 mt-16 border-y border-gray-100 dark:border-gray-800 sm:flex justify-between">
                     <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Solutions simple</h6>
-                        <p class="mt-2 text-gray-500">On ADORE la simplicité</p>
+                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Simple solutions</h6>
+                        <p class="mt-2 text-gray-500">We LOVE simple things</p>
                     </div>
                     <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Réponse rapide</h6>
-                        <p class="mt-2 text-gray-500">On a du temps pour vous</p>
+                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Fast response</h6>
+                        <p class="mt-2 text-gray-500">We don't have much to do</p>
                     </div>
                     <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">Les chouchous</h6>
-                        <p class="mt-2 text-gray-500">On nous aimes, quoi dire de plus</p>
+                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The most loved</h6>
+                        <p class="mt-2 text-gray-500">People generally love us, what can we say</p>
                     </div>
                 </div>
             </div>
