--- a/src/components/en/Services.astro
+++ b/src/components/en/Services.astro
@@ -11,10 +11,10 @@ import Container from "./Container.astro"
       </svg>
 
       <h2 class="my-8 text-2xl font-bold text-gray-700 dark:text-white md:text-4xl">
-        Une approche axée sur les affaires avant tout
+        A business-first approach to technologies
 
       </h2>
-      <p class="text-gray-600 dark:text-gray-300">Nous priorisons vos objectifs d’affaires en alignant chaque solution technologique à vos besoins uniques. Avec nous, la technologie n'est pas seulement un outil, c'est un catalyseur de croissance qui génère des résultats concrets.</p>
+      <p class="text-gray-600 dark:text-gray-300">We prioritize your business goals, aligning every tech solution with your unique needs. With us, technology isn't just a tool—it's a catalyst for growth, driving results that matter.</p>
     </div>
     <div
       class="mt-16 grid divide-x divide-y divide-gray-100 dark:divide-gray-700 overflow-hidden rounded-3xl border border-gray-100 text-gray-600 dark:border-gray-700 sm:grid-cols-2 lg:grid-cols-4 lg:divide-y-0 xl:grid-cols-4"
@@ -33,10 +33,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Architecture systèmes
+              Systems architecture
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Les systèmes informatiques sont complexes, nous non, la plupart du temps.
+              IT Systems get complicated, we don't, most of the time.
             </p>
           </div>
           <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -61,10 +61,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Solution personnalisée
+              Custom solution
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Chacun est unique, y compris une organisation ou une entité entreprenante engagée dans des activités commerciales, industrielles ou professionnelles, autrement dit une entreprise.
+              Everyone is unique, including an organization or enterprising entity engaged in commercial, industrial, or professional activities, aka a business.
             </p>
           </div>
           <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -89,10 +89,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-            Supposition éclairée
+              Educated guess
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              On ne peut pas tout savoir, mais on en sait assez pour deviner dans la bonne direction.
+              We can't know everything, but we know enough to guess in the right direction.
             </p>
           </div>
           <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -117,10 +117,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-            Signal d’alarme
+            Wake-up call
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Parfois, il suffit d’entendre la vérité, quoi qu’il en soit.
+              Sometimes, you just need to hear the truth, no matter what.
             </p>
           </div>
           <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
