--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,11 +1,11 @@
 ---
-import Stats from '../../components/Stats.astro';
-import Services from '../../components/Services.astro';
-import HeroSection from '../../components/HeroSection.astro';
+import Stats from '../../components/en/Stats.astro';
+import Services from '../../components/en/Services.astro';
+import HeroSection from '../../components/en/HeroSection.astro';
 import Layout from '../../layouts/Layout.astro';
-import Testimonials from '../../components/Testimonials.astro';
-import CallToAction from '../../components/CallToAction.astro';
-import Blog from '../../components/Blog.astro';
+import Testimonials from '../../components/en/Testimonials.astro';
+import CallToAction from '../../components/en/CallToAction.astro';
+import Blog from '../../components/en/Blog.astro';
 ---
 
 <Layout title="Welcome to Astrolus.">
