--- a/src/components/en/AppHeader.astro
+++ b/src/components/en/AppHeader.astro
@@ -8,7 +8,7 @@ const links = [
 
     {
         to: "/#reviews",
-        label: "Avis",
+        label: "Reviews",
     },
 ];
 ---
@@ -88,7 +88,7 @@ const links = [
 
                     <div class="mt-12 lg:mt-0">
                         <a href="#hs-chat-open" class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max">
-                            <span class="relative text-sm font-semibold text-white"> Nous Contacter</span>
+                            <span class="relative text-sm font-semibold text-white"> Contact Us</span>
                         </a>
                     </div>
                 </div>
