--- a/src/components/en/CallToAction.astro
+++ b/src/components/en/CallToAction.astro
@@ -53,9 +53,9 @@ import Container from "./Container.astro"
         />
       </div>
       <div class="mt-6 m-auto space-y-6 md:w-8/12 lg:w-7/12">
-        <h1 class="text-center text-4xl font-bold text-gray-800 dark:text-white md:text-5xl">Nous Contacter maintenant</h1>
+        <h1 class="text-center text-4xl font-bold text-gray-800 dark:text-white md:text-5xl">Contact Us now</h1>
         <p class="text-center text-xl text-gray-600 dark:text-gray-300">
-          Dites-nous vos besoins ou problèmes, on ne vous jugera pas.
+          Tell us your needs or problems, we won't judge.
         </p>
         <div class="flex flex-wrap justify-center gap-6">
           <a
@@ -63,7 +63,7 @@ import Container from "./Container.astro"
               class="relative flex h-12 w-full items-center justify-center px-8 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
             >
               <span class="relative text-base font-semibold text-white dark:text-dark"
-                >Nous Contacter</span
+                >Contact Us</span
               >
             </a>
             <a
@@ -72,7 +72,7 @@ import Container from "./Container.astro"
             >
               <span
                 class="relative text-base font-semibold text-primary dark:text-white"
-                >En Savoir Plus</span
+                >More about</span
               >
           </a>
         </div>
