--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import Container from "./Container.astro"
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifier les Technologies <span class="text-primary dark:text-white">pour Votre Entreprise</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Chez itrel <span class="text-xs">[i•trel]</span>, nous nous concentrons sur la technologie pour vous, et non l’inverse. Du conseil à la mise en œuvre, nous sommes là pour transformer vos défis technologiques en solutions qui produisent des résultats, tout en ajoutant une touche de plaisir.</p>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">Chez itrel <span class="text-xs">[i•trel]</span>, nous nous concentrons sur la technologie pour vous, et non l'inverse. Du conseil à la mise en œuvre, nous sommes là pour transformer vos défis technologiques en solutions qui produisent des résultats, tout en ajoutant une touche de plaisir.</p>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#hs-chat-open"
