--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -15,8 +15,8 @@ import Container from "./Container.astro"
         <div class="flex gap-4">
           <img class="w-12 h-12 rounded-full" src="./images/avatars/riotrah.jpeg" alt="user avatar" width="400" height="400" loading="lazy">
           <div>
-            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Daniella Doe</h6>
-            <p class="text-sm text-gray-500 dark:text-gray-300">Mobile dev</p>
+            <h6 class="text-lg font-medium text-gray-700 dark:text-white">riotrah</h6>
+            <p class="text-sm text-gray-500 dark:text-gray-300">Amperity</p>
           </div>
         </div>
         <!-- <p class="mt-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum aliquid quo eum quae quos illo earum ipsa doloribus nostrum minus libero aspernatur laborum cum, a suscipit, ratione ea totam ullam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto laboriosam deleniti aperiam ab veniam sint non cumque quis tempore cupiditate. Sint libero voluptas veniam at reprehenderit, veritatis harum et rerum.</p> -->
@@ -35,8 +35,8 @@ import Container from "./Container.astro"
         <div class="flex gap-4">
           <img class="w-12 h-12 rounded-full" src="./images/avatars/dillon-e.png" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
-            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Yanick Doe</h6>
-            <p class="text-sm text-gray-500 dark:text-gray-300">Developer</p>
+            <h6 class="text-lg font-medium text-gray-700 dark:text-white">dillon-e</h6>
+            <p class="text-sm text-gray-500 dark:text-gray-300">Lendio</p>
           </div>
         </div>
         <!-- <p class="mt-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto laboriosam deleniti aperiam ab veniam sint non cumque quis tempore cupiditate. Sint libero voluptas veniam at reprehenderit, veritatis harum et rerum.</p> -->
@@ -45,8 +45,8 @@ import Container from "./Container.astro"
         <div class="flex gap-4">
           <img class="w-12 h-12 rounded-full" src="./images/avatars/mfeur.jpeg" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
-            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Jane Doe</h6>
-            <p class="text-sm text-gray-500 dark:text-gray-300">Mobile dev</p>
+            <h6 class="text-lg font-medium text-gray-700 dark:text-white">mfeuhrer</h6>
+            <p class="text-sm text-gray-500 dark:text-gray-300">ERGOS Technology Partners</p>
           </div>
         </div>
 <!--         <p class="mt-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto laboriosam deleniti aperiam ab veniam sint non cumque quis tempore cupiditate. Sint libero voluptas veniam at reprehenderit, veritatis harum et rerum.</p> -->
@@ -55,8 +55,8 @@ import Container from "./Container.astro"
         <div class="flex gap-4">
           <img class="w-12 h-12 rounded-full" src="./images/avatars/ratedBlaster.jpeg" alt="user avatar" width="200" height="200" loading="lazy">
           <div>
-            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Andy Doe</h6>
-            <p class="text-sm text-gray-500 dark:text-gray-300">Manager</p>
+            <h6 class="text-lg font-medium text-gray-700 dark:text-white">RatedBlaster</h6>
+            <p class="text-sm text-gray-500 dark:text-gray-300">Tredion Automatisering BV</p>
           </div>
         </div>
         <!-- <p class="mt-8"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto laboriosam deleniti aperiam ab veniam sint non cumque quis tempore cupiditate. Sint libero voluptas veniam at reprehenderit, veritatis harum et rerum.</p> -->
@@ -65,8 +65,8 @@ import Container from "./Container.astro"
         <div class="flex gap-4">
           <img class="w-12 h-12 rounded-full" src="./images/avatars/tdark.png" alt="user avatar" width="400" height="400" loading="lazy">
           <div>
-            <h6 class="text-lg font-medium text-gray-700 dark:text-white">Yanndy Doe</h6>
-            <p class="text-sm text-gray-500 dark:text-gray-300">Mobile dev</p>
+            <h6 class="text-lg font-medium text-gray-700 dark:text-white">TDarkShadow</h6>
+            <p class="text-sm text-gray-500 dark:text-gray-300">Wabbajack</p>
           </div>
         </div>
         <!-- <p class="mt-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto laboriosam deleniti aperiam ab veniam sint non cumque quis tempore cupiditate. Sint libero voluptas veniam at reprehenderit, veritatis harum et rerum.</p> -->
